--- a/test/test.html
+++ b/test/test.html
@@ -2,6 +2,7 @@
 	<head>
 		<script src='../resources/jquery.min.js'></script>
 		<script src='../lib/semkey.js'></script>
+		<script src='../test/test.js'></script>
 	</head>
 	<body>
 		<h1>Hi</h1>
